@@ -45,6 +45,9 @@ define('BALLOON_CMD', '');
 define('JUDGEHOST_WARNING', 30);
 define('JUDGEHOST_CRITICAL', 120);
 
+// Maximum width/height of a thumbnail for uploaded testcase images.
+define('THUMBNAIL_SIZE', 128);
+
 // Internal and output character set used, don't change.
 define('DJ_CHARACTER_SET', 'utf-8');
 define('DJ_CHARACTER_SET_MYSQL', 'utf8');
