@@ -480,6 +480,9 @@ CREATE TABLE `testcase` (
   `probid` int(4) unsigned NOT NULL COMMENT 'Corresponding problem ID',
   `rank` int(4) NOT NULL COMMENT 'Determines order of the testcases in judging',
   `description` varchar(255) DEFAULT NULL COMMENT 'Description of this testcase',
+  `image` longblob DEFAULT NULL COMMENT 'A graphical representation of this testcase',
+  `image_thumb` longblob DEFAULT NULL COMMENT 'Aumatically created thumbnail of the image',
+  `image_type` varchar(4) DEFAULT NULL COMMENT 'File type of the image and thumbnail',
   `sample` tinyint(1) unsigned NOT NULL DEFAULT '0' COMMENT 'Sample testcases that can be shared with teams',
   PRIMARY KEY  (`testcaseid`),
   UNIQUE KEY `rank` (`probid`,`rank`),
