@@ -74,6 +74,11 @@ ALTER TABLE `problem`
   ADD COLUMN `outputlimit` int(4) unsigned DEFAULT NULL COMMENT 'Maximum output size (in kB) for this problem' AFTER `memlimit`,
   ADD COLUMN `special_compare_args` varchar(255) DEFAULT NULL COMMENT 'Optional arguments to special_compare script' AFTER `special_compare`;
 
+ALTER TABLE `testcase`
+  ADD COLUMN `image` longblob DEFAULT NULL COMMENT 'A graphical representation of this testcase' AFTER `description`,
+  ADD COLUMN `image_thumb` longblob DEFAULT NULL COMMENT 'Aumatically created thumbnail of the image' AFTER `image`,
+  ADD COLUMN `image_type` varchar(4) DEFAULT NULL COMMENT 'File type of the image and thumbnail' AFTER `image_thumb`;
+
 --
 -- Transfer data from old to new structure
 --
