@@ -61,6 +61,13 @@ tr.summary td { border-top: 1px solid black; }
 	max-width: 400px;
 }
 
+.testimage {
+	border-left: 1px solid silver;
+}
+.testimage a {
+	display: inline;
+}
+
 /* set cell padding to 0 and <a> tag to 3 to make all of cell
    clickable in the jury scoreboard and for all team cells */
 .scoreboard_jury td, .scoreboard_jury th { padding: 0px; }
