@@ -20,6 +20,7 @@ Version 4.1.0 - DEV
  - Allow to add restrictions on contests, problems and languages to
    judgehosts.
  - Add optional per problem memory/output limits (Closes #152).
+ - Allow storing optional descriptive image for each test case.
 
 Version 4.0.0 - 22 July 2014
 ----------------------------
